--- a/applitutoriel-js-lite/static/404.html
+++ b/applitutoriel-js-lite/static/404.html
@@ -63,7 +63,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="fr mrl"><p>Application TUTORIEL - v5.1.0-rc.2</p></div>
+                <div class="fr mrl"><p>Application TUTORIEL - v5.2.3</p></div>
             </div>
         </footer>
     </div>
